Mon Jul  5 18:49:56 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/messages.sgml: 
	* glib/glib-sections.txt: Add g_debug.

2004-06-15  Federico Mena Quintero  <federico@ximian.com>

	* glib/tmpl/conversions.sgml: New section on file name encodings.

	* glib/file-name-encodings.sxd: New diagram of how file name
	encodings work.

	* glib/file-name-encodings.png: Same as above, for inclusion in
	the generated docs.

	* glib/Makefile.am (HTML_IMAGES): Add file-name-encodings.png.
	(EXTRA_DIST): Add the new images.

	* glib/running.sgml: Add ids to the corresponding paragraphs that
	describe G_FILENAME_ENCODING and G_BROKEN_FILENAMES, to be able to
	reference them from elsewhere.

Thu Jun 10 21:29:55 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/tmpl/modules.sgml: Add an example for GModule
	usage.  (#144127, Tommi Komulainen)

Sun Jun  6 23:20:42 2004  Matthias Clasen  <maclas@gmx.de>

	* gobject/tmpl/gtype.sgml: Fix the docs for G_DEFINE_TYPE()
	and friends.  (#143800, Crispin Flowerday)

2004-05-05  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-docs.sgml: 
	* glib/glib-docs.sgml: Add multiple indices.

2004-04-30  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.1 ===

2004-04-23  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Document LIBCHARSET_ALIAS_DIR.

2004-04-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/types.sgml: Correct the description of the
	gfloat and gdouble ranges.

Tue Mar 16 12:06:09 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.4.0 ===
	
Sun Mar 14 11:00:41 2004  Owen Taylor  <otaylor@redhat.com>

	* gobject/tmpl/signals.sgml: Document the fact that
	g_signal_connect_object() does *not* remove the signal
	when the object is disconnected currently and describe
	a workaround to prevent memory leaks.

Tue Mar  9 09:16:11 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.6 ===

Mon Mar  8 08:32:36 2004  Owen Taylor  <otaylor@redhat.com>
