@@ -65,20 +65,26 @@ struct _GTypeModuleClass
   void (*reserved4) (void);
 };
 
-GType    g_type_module_get_type      (void);
-gboolean g_type_module_use           (GTypeModule     *module);
-void     g_type_module_unuse         (GTypeModule     *module);
-void     g_type_module_set_name      (GTypeModule     *module,
-				      const gchar     *name);
-GType    g_type_module_register_type (GTypeModule     *module,
-				      GType            parent_type,
-				      const gchar     *type_name,
-				      const GTypeInfo *type_info,
-				      GTypeFlags       flags);
-void     g_type_module_add_interface (GTypeModule           *module,
-				      GType                  instance_type,
-				      GType                  interface_type,
-				      const GInterfaceInfo  *interface_info);
+GType    g_type_module_get_type       (void);
+gboolean g_type_module_use            (GTypeModule          *module);
+void     g_type_module_unuse          (GTypeModule          *module);
+void     g_type_module_set_name       (GTypeModule          *module,
+                                       const gchar          *name);
+GType    g_type_module_register_type  (GTypeModule          *module,
+                                       GType                 parent_type,
+                                       const gchar          *type_name,
+                                       const GTypeInfo      *type_info,
+                                       GTypeFlags            flags);
+void     g_type_module_add_interface  (GTypeModule          *module,
+                                       GType                 instance_type,
+                                       GType                 interface_type,
+                                       const GInterfaceInfo *interface_info);
+void     g_type_module_register_enum  (GTypeModule          *module,
+                                       const gchar          *name,
+                                       const GEnumValue     *const_static_values);
+void     g_type_module_register_flags (GTypeModule          *module,
+                                       const gchar          *name,
+                                       const GFlagsValue    *const_static_values);
 
 G_END_DECLS
 
